--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   facebook: tommymulc
   github: tmulc18
   instagram: tommymulc
-  linkedin: thomas_mulc
+  linkedin: thomasmulc
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
