--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Tommy Mulc, hacktildawn
 description: Personal blog
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://github.com/tmulc18.png
 
 #
 # Flags below are optional
