--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Tommy Mulc, hacktildawn
+name: hacktildawn
 
 # Short bio or description (displayed in the header)
-description: Personal blog
+description: Tommy Mulc's personal blog
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://github.com/tmulc18.png
@@ -48,6 +48,10 @@ permalink: /:title/
 
 # The release of Jekyll Now that you're using
 version: v1.2.0
+
+markdown: kramdown
+permalink: pretty
+highlighter: rouge
 
 # Jekyll 3 now only supports Kramdown for Markdown
 kramdown:
